[package]
name = "herkulex-drs-0x01-stm32f1xx"
description="A driver for servomotors Herkulex DRS-0101 and DRS-0201 using USART on stm32f1xx"
authors=["Ronan Bonnet"]
license="Apache-2.0"
readme="README.md"
version = "0.1.0"
edition = "2021"
keywords=["Herkulex", "USART", "servo", "servomotor", "stm32f1xx"]
categories=["embedded"]
repository="https://github.com/ClubRobotInsat/herkulex-stm32f1xx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.3"
drs-0x01 = "0.3.0"

[dependencies.stm32f1xx-hal]
version = "0.9"
features = ["stm32f103", "rt", "medium", "has-can"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations